--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "config": "^1.20.4",
     "express": "^4.13.4",
     "request": "^2.72.0",
-    "mongoose": "^4.5.2"
+    "mongoose": "^4.5.2",
+    "sync-request": "^3.0.1"
   },
   "bugs": {
     "url": "https://github.com/ericluii/my-places/issues"
