--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Eric Lui",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.0.0",
     "body-parser": "^1.15.0",
     "config": "^1.20.4",
     "express": "^4.13.4",
